<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_pale"
    tools:context=".MainActivity">

    <!-- This contains event attribute fields that users can modify -->
    <LinearLayout
        android:id="@+id/fillable_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintVertical_bias="0.0">

        <!-- Edit Poster Image -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_margin="5dp"
            android:text="@string/prompt_image_edit"
            android:textSize="15sp"
            android:textColor="@color/primary_dark"/>

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/default_image"
            android:contentDescription="@string/poster_image_content_description" />

        <!-- Edit Event Title -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"

            android:text="@string/event_title"
            android:textSize="20sp"
            android:textColor="@color/primary_deep"/>

        <EditText
            android:id="@+id/edit_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="30dp"

            android:inputType="text"
            android:importantForAutofill="no"
            android:text="@string/default_event_title"
            android:textSize="18sp"

            android:background="@color/white" />

        <!-- Edit Event Description -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"

            android:text="@string/event_description"
            android:textSize="20sp"
            android:textColor="@color/primary_deep"/>

        <EditText
            android:id="@+id/edit_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="30dp"

            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:text="@string/default_event_description"
            android:textSize="18sp"

            android:background="@color/white" />

        <!-- Edit Waiting List Capacity -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"

            android:text="@string/waiting_list_capacity"
            android:textSize="20sp"
            android:textColor="@color/primary_deep"/>

        <EditText
            android:id="@+id/edit_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="30dp"

            android:inputType="number"
            android:importantForAutofill="no"
            android:text=""
            android:textSize="18sp"

            android:background="@color/white" />

        <!-- Other fields to edit... -->
        <!-- see text input types for future EditText views. They're very useful -->

    </LinearLayout>

    <!-- This contains the confirmation and cancellation buttons-->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        android:background="@color/primary_mid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"

            android:text="@string/cancel"
            android:textSize="20sp"

            android:backgroundTint="@color/primary_dark"
            app:cornerRadius="12dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"

            android:text="@string/confirm"
            android:textSize="20sp"

            android:backgroundTint="@color/primary_dark"
            app:cornerRadius="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>